Set static margin-top to datepicker wrapper to prevent jumping

--- a/src/common/components/dateRangePicker/datePicker.scss
+++ b/src/common/components/dateRangePicker/datePicker.scss
@@ -8,6 +8,7 @@
   &__no-popper {
     position: unset !important;
     transform: unset !important;
+    margin-top: 10px;
   }
   
   &__triangle {
